syntax = "proto3";

package excersice;

option go_package = "excersice/excersice/proto";

// Unary Communication: Sum two numbers
message UnarySumReqest{
  int32 num1 = 1;
  int32 num2 = 2;
}

message UnarySumResponse{
  int32 result = 1;
}

// Serverside Streaming:
message ServerStreamRequest{
  int32 num = 1;
}

message ServerStreamResponse{
  int32 primeDecomposition = 1;
}

// Clientside Streaming
message ClientStreamRequest{
  int32 num = 1;
}

message ClientStreamResponse{
  int32 avg =  1;
}

// BiDirectional Streaming
// 전송된 번호들의 최대값이 변경될때마다 변경
message BidirectionalRequest{
  int32 num = 1;
}

message BidirectionalResponse{
  int32 maximumNumber = 1;
}

service ExcersiceService{
  rpc UnarySum (UnarySumReqest) returns (UnarySumResponse);
  rpc ServerStreamPrimeNumber (ServerStreamRequest) returns (stream ServerStreamResponse);
  rpc ClientStreamAvg (stream ClientStreamRequest) returns (ClientStreamResponse);
  rpc BiDirectionalStreamAvg(stream BidirectionalRequest) returns (stream BidirectionalResponse);
}